[tool.poetry]
name = "localstack-s3"
version = "0.1.0"
description = ""
authors = ["dddsuz2 <daidai121207@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
memory-profiler = "^0.61.0"
matplotlib = "^3.8.4"
boto3 = "^1.34.79"
smart-open = "^7.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
